tests/ui/feature-gates/feature-gate-doc_cfg.stderr
error[E0658]: `#[doc(cfg)]` is experimental
  --> $DIR/feature-gate-doc_cfg.rs:1:1
   |
LL | #[doc(cfg(unix))]
   | ^^^^^^^^^^^^^^^^^
   |
   = note: see issue #43781 <https://github.com/rust-lang/rust/issues/43781> for more information
   = help: add `#![feature(doc_cfg)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0658`.
