tests/ui/feature-gates/feature-gate-doc_cfg.rs
#[doc(cfg(unix))] //~ ERROR
fn main() {}
